--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,8 @@
-FROM openjdk:8-jdk-alpine
-VOLUME /tmp
+FROM openjdk:8-jre-alpine
+
 EXPOSE 8080
-ADD target/*.jar app.jar
-ENTRYPOINT [ "sh", "-c", "java -jar /app.jar" ]
+
+COPY ./build/libs/my-app-1.0-SNAPSHOT.jar /usr/app/
+WORKDIR /usr/app
+
+ENTRYPOINT ["java", "-jar", "my-app-1.0-SNAPSHOT.jar"]
