--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,6 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
         image: ddineesh/github-action-demo
-        registry: docker.io
+        registry: hub.docker.com
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
